--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,23 @@
       <input formControlName="confirmPassword" type="password" class="form-control">
     </div>
 
+    <div formGroupName="addressFields">
+      <div class="form-group">
+        <label>City</label>
+        <input formControlName="city" type="text" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label>State</label>
+        <input formControlName="state" type="text" class="form-control">
+      </div>
+
+      <div class="form-group">
+        <label>Postal Code</label>
+        <input formControlName="postalCode" type="password" class="form-control">
+      </div>
+    </div>
+
     <button class="btn btn-primary" type="submit">Register</button>
 
   </form>
