--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,9 @@
   <form [formGroup]="registrationForm">
     <div class="form-group">
       <label>Username</label>
-      <input formControlName="userName" type="text" class="form-control">
-    </div>
+      <input [class.is-invalid]="registrationForm.get('userName').invalid && registrationForm.get('userName').touched" formControlName="userName" type="text" class="form-control">
+      <small [class.d-none]="!(registrationForm.get('userName').invalid && registrationForm.get('userName').touched)">Username is invalid</small>
+    </div>    
 
     <div class="form-group">
       <label>Password</label>
@@ -19,7 +20,7 @@
     <div formGroupName="addressFields">
       <div class="form-group">
         <label>City</label>
-        <input formControlName="city" type="text" class="form-control">
+        <input [class.is-invalid]="registrationForm.get('addressFields.city').invalid && registrationForm.get('addressFields.city').touched" formControlName="city" type="text" class="form-control">
       </div>
 
       <div class="form-group">
@@ -39,9 +40,9 @@
 
   </form>
 
-  <!-- {{ registrationForm.value | json }}
+  {{ registrationForm.value | json}}
   <br>
-  {{ registrationForm.value.addressFields | json }} -->
+  {{ registrationForm.value.addressFields | json }}
 </div>
 
 <router-outlet></router-outlet>
